--- a/multicast/Makefile.am
+++ b/multicast/Makefile.am
@@ -2,7 +2,8 @@
 feniceincludedir = $(top_srcdir)/include
 
 noinst_LTLIBRARIES = libmulticast.la
-libmulticast_la_SOURCES =	multicast.c 
+libmulticast_la_SOURCES =	add_multicast_stream.c \
+				multicast.c 
 			
 libmulticast_la_LDFLAGS = -static
 INCLUDES = -I$(feniceincludedir) -I$(top_srcdir)
