Some changes in 'docs' and 'avroot' for installation automation.

--- a/avroot/Makefile.am
+++ b/avroot/Makefile.am
@@ -1,9 +1,14 @@
-FENICE_ROOT_DIR = /var/fenice/root/
+FENICE_AVROOT_DIR = $(DESTDIR)/var/fenice/avroot/
+
 FENICE_TEST_FILES = test.sd audio.mp3 video.mpg
 
 install-data-local:
-	$(INSTALL) -m 755 -d $(FENICE_ROOT_DIR)
-	$(INSTALL) $(FENICE_TEST_FILES) $(FENICE_ROOT_DIR)
+	$(INSTALL) -m 755 -d $(FENICE_AVROOT_DIR)
+	$(INSTALL) $(FENICE_TEST_FILES) $(FENICE_AVROOT_DIR)
 
 uninstall-local:
-	rm -rf $(FENICE_ROOT_DIR)
+	@echo -n "Removing A/V Test Files...";\
+	for FILE in $(FENICE_TEST_FILES); do\
+		rm $(FENICE_AVROOT_DIR)/$$FILE;\
+	done;\
+	echo " done."
