--- a/docs/en/Makefile.am
+++ b/docs/en/Makefile.am
@@ -1,6 +1,11 @@
-####### kdevelop will overwrite this part!!! (begin)##########
-
-
 EXTRA_DIST = index.html index-1.html index-2.html index-3.html index-4.html index-5.html index-6.html 
 
-####### kdevelop will overwrite this part!!! (end)############
+FENICE_DOCS_DIR = $(DESTDIR)$(datadir)/doc/fenice
+
+install-data-local:
+	
+	$(INSTALL) -m 755 -d $(FENICE_DOCS_DIR)
+	$(INSTALL_DATA) *.html $(FENICE_DOCS_DIR)
+
+uninstall-local:
+	rm -rf $(FENICE_DOCS_DIR)
