etc/: avroot/:         - Minor changes to svn:ignore
src/prefs_use_default.c:
src/prefs_init.c:
include/fenice/prefs.h:
        - Substituted embedded defaults with configure-time generated ones.
          New run-time configuration file check order:
            1. Command line argument
            2. System default (*/etc/fenice.conf)
            3. Internal defaults
                                                                                                    
autotools:
        - Added support for default sysconfdir (*/etc)
        - Added support for default localstatedir (*/var)
        - Added FENICE_CONF_DIR define
        - Added FENICE_AVROOT_DIR define

--- a/avroot/Makefile.am
+++ b/avroot/Makefile.am
@@ -1,4 +1,4 @@
-FENICE_AVROOT_DIR = $(DESTDIR)/var/fenice/avroot/
+FENICE_AVROOT_DIR = $(DESTDIR)@fenice_avroot_dir@
 
 FENICE_TEST_FILES = test.sd audio.mp3 video.mpg
 
