autotools: 	- Completed DESTDIR integration. Now you can
	    $ make DISTDIR=<some-test-installation-dir> install

	  Use it to do user-space test installation.

	- Added fenice.spec for RPM packages build. Don't forget that you must
	  be root to successfullly build RPMS from sources (DEPRECATE) or
	  properly set your rpmmacros file.
	
	- Minor changes in configure.ac and in Makafile.am files.

--- a/Makefile.am
+++ b/Makefile.am
@@ -18,27 +18,15 @@ SUBDIRS =	socket \
 		
 
 EXTRA_DIST = 	include \
-		admin \
-		templates
+		config \
+		templates \
+		INSTALL-FAST
+		
 
 dist-hook:
-	@for auxfile in config/*; do \
-		if test -f $$auxfile; then \
-			cp -p $$auxfile $(distdir)/libltdl; \
-		fi; \
-	done; \
-	for plugin in $(distdir)/plugins/plugins/*; do \
-		rm -rf $$plugin; \
+	@for svn in `find $(distdir) -iname .svn`; do \
+		rm -rf $$svn; \
 	done
-		
-uninstall-local:
-	@if test -d $(datadir)/nemesi/plugins; then\
-		rmdir $(datadir)/nemesi/plugins;\
-	fi
-	@if test -d $(datadir)/nemesi; then\
-		rmdir $(datadir)/nemesi;\
-	fi
-
 
 distclean-local:
 	@if test -d autom4te.cache; then \
