--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -41,6 +41,7 @@ fenice_LDADD =	$(top_srcdir)/eventloop/libeventloop.la \
 		$(top_srcdir)/rtcp/librtcp.la \
 		$(top_srcdir)/rtp/librtp.la \
 		$(top_srcdir)/mediainfo/libmediainfo.la \
+		$(top_srcdir)/bufferpool/libbufferpool.la \
 		$(top_srcdir)/src/libprefs.la \
 		$(top_srcdir)/src/libdebug.la \
 		$(top_srcdir)/src/libutils.la \
