Physical level modified. Fenice will not run properly. Scheduler must be changed/

--- a/bufferpool/Makefile.am
+++ b/bufferpool/Makefile.am
@@ -4,6 +4,7 @@ feniceincludedir = $(top_srcdir)/include
 noinst_LTLIBRARIES = libbufferpool.la
 libbufferpool_la_SOURCES = 	\
 				OMSbuff_free.c \
+				OMSbuff_getslot.c \
 				OMSbuff_new.c \
 				OMSbuff_read.c \
 				OMSbuff_ref.c \
