--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -6,10 +6,10 @@ libutils_la_SOURCES =	alloc_path_name.c \
 			NTP_time.c \
 			random32.c \
 			get_UTC_time.c \
-			is_supported_url.c \
-			round.c
+			is_supported_url.c
 
-libutils_la_LDFLAGS = -static
+libutils_la_LDFLAGS = -static -lm
+
 
 libprefs_la_SOURCES =	prefs_init.c \
 			prefs_get_serv_root.c \
@@ -28,10 +28,11 @@ libdebug_la_LDFLAGS = -static
 #libplugins_la_LDFLAGS = -static
 #libplugins_la_LIBADD = @LIBLTDL@
 
+.NOTPARALLEL: fenice
+	
 bin_PROGRAMS = fenice
 
 fenice_SOURCES =	main.c 
-			
 
 fenice_LDADD =	$(top_srcdir)/eventloop/libeventloop.la \
 		$(top_srcdir)/rtsp/librtsp.la \
@@ -42,13 +43,13 @@ fenice_LDADD =	$(top_srcdir)/eventloop/libeventloop.la \
 		$(top_srcdir)/rtp/librtp.la \
 		$(top_srcdir)/mediainfo/libmediainfo.la \
 		$(top_srcdir)/bufferpool/libbufferpool.la \
+		$(top_srcdir)/xmlparser/libxmlparser.la \
+		$(top_srcdir)/socket/libsocket.la \
+		$(top_srcdir)/command_environment/libcommand.la \
 		$(top_srcdir)/src/libprefs.la \
 		$(top_srcdir)/src/libdebug.la \
 		$(top_srcdir)/src/libutils.la \
-		$(top_srcdir)/md5/libmd5.la \
-		$(top_srcdir)/xmlparser/libxmlparser.la \
-		$(top_srcdir)/socket/libsocket.la \
-		$(top_srcdir)/command_environment/libcommand.la 
+		$(top_srcdir)/md5/libmd5.la
 
 if FENICE_EFENCE
 fenice_LDFLAGS = -lefence
