Now you can use comments (#) in fenice.conf and set max_session. Please calculate max_session according to your bandwith. Example of a configuration file (fenice.conf):
#-----------------------------------------------------------
#Define root dir where medias are stored
root=/home/chicco/media/
#Define RTSP port where Fenice listen for new connection
port=1554
#Define max session (calculate it according to your bandwith)
max_session=10
#-----------------------------------------------------------

If max_session is arriched and if you have set a twin in the sd file
Fenice sends a redirect_3xx message so client switchs to the twin resource.

Example of sd file:

twin rtsp://myserver.mydomain:1554/mytwinresource.sd
stream
        file_name myfile.mpg
	priority 1
        media_source stored
        payload_type 32
        clock_rate 90000
        encoding_name MPV
        coding_type frame
        frame_rate 25
        byte_per_pckt 1900
stream_end

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -19,6 +19,7 @@ libprefs_la_SOURCES =	prefs_init.c \
 			prefs_get_serv_root.c \
 			prefs_get_hostname.c \
 			prefs_get_port.c \
+			prefs_get_max_session.c \
 			prefs_use_default.c
 
 libprefs_la_LDFLAGS = -static
