--- a/etc/Makefile.am
+++ b/etc/Makefile.am
@@ -1,7 +1,15 @@
 FENICE_CONF_FILE = fenice.conf
 FENICE_CONF_DIR = $(DESTDIR)@fenice_conf_dir@
 
-EXTRA_DIST = $(FENICE_CONF_FILE)
+EXTRA_DIST = $(FENICE_CONF_FILE).in
+
+all: fenice.conf
+
+fenice.conf: fenice.conf.in
+	cpp -I.. -P $(FENICE_CONF_FILE).in -o $(FENICE_CONF_FILE)
+
+clean:
+	rm $(FENICE_CONF_FILE)
 
 install-data-local:
 	@if test -f $(FENICE_CONF_DIR)/$(FENICE_CONF_FILE); then \
