Documentation updated: new documentation is in docs/en/fenice-howto.html (from the Web site).

--- a/docs/en/Makefile.am
+++ b/docs/en/Makefile.am
@@ -1,4 +1,4 @@
-EXTRA_DIST = index.html index-1.html index-2.html index-3.html index-4.html index-5.html index-6.html 
+EXTRA_DIST = fenice-howto.html
 
 FENICE_DOCS_DIR = $(DESTDIR)@fenice_docs_dir@
 
