--- a/docs/Makefile.am
+++ b/docs/Makefile.am
@@ -13,7 +13,7 @@ all:
 	echo " done"; \
 	gzip -9 -f $(man_MANS).ps
 	@echo -n "Creating HTML..."; \
-	man2html $(man_MANS) | sed '1,2d' > $(man_MANS).html; \
+	groff -mandoc -e -t -Thtml $(man_MANS) > $(man_MANS).html; \
 	echo " done";
 
 clean:
@@ -24,16 +24,16 @@ clean:
 distclean: clean
 maintainer-clean: clean
 
-NEMESI_DOCS_DIR = $(DESTDIR)@fenice_docs_dir@
+FENICE_DOCS_DIR = $(DESTDIR)@fenice_docs_dir@
 
 install-data-local:
 	
-	$(INSTALL) -m 755 -d $(NEMESI_DOCS_DIR)
-	$(INSTALL_DATA) $(man_MANS).ps.gz $(NEMESI_DOCS_DIR)
-	$(INSTALL_DATA) $(man_MANS).pdf $(NEMESI_DOCS_DIR)
-	$(INSTALL_DATA) $(man_MANS).html $(NEMESI_DOCS_DIR)
+	$(INSTALL) -m 755 -d $(FENICE_DOCS_DIR)
+	$(INSTALL_DATA) $(man_MANS).ps.gz $(FENICE_DOCS_DIR)
+	$(INSTALL_DATA) $(man_MANS).pdf $(FENICE_DOCS_DIR)
+	$(INSTALL_DATA) $(man_MANS).html $(FENICE_DOCS_DIR)
 
 uninstall-local:
-	rm -rf $(NEMESI_DOCS_DIR)
+	rm -rf $(FENICE_DOCS_DIR)
 
 .PHONY: distclean
