--- a/docs/howto/Makefile.am
+++ b/docs/howto/Makefile.am
@@ -11,4 +11,4 @@ uninstall-local:
 	rm -rf $(FENICE_DOCS_DIR_HOWTO)
 
 update:
-	wget https://killgates.polito.it/streaming/book/print/31 -O - | tidy -quiet --show-warnings no -indent --indent-spaces 4 > fenice-howto.html
+	wget https://streaming.polito.it/book/print/31 -O - | tidy -quiet --show-warnings no -indent --indent-spaces 4 > fenice-howto.html || :
