Full mpeg 4 video es support added. A complete parser was written and so all profiles are suppoted. dump_payload.c is used ONLY for STRONG debug (see mediainfo/get_frame.c). TODO: right profile-id and config in sdp (you 'll see them in the next commit, please wait!). NOTE: 	1) vcodec: mpeg4 	2) format: m4v

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -10,6 +10,7 @@ libutils_la_SOURCES =	alloc_path_name.c \
 			NTP_time.c \
 			random32.c \
 			get_UTC_time.c \
+			dump_payload.c \
 			is_supported_url.c
 
 libutils_la_LDFLAGS = -static -lm
