- final MPEG-4 video ES parser - separate header and structure for all video format support TODO: 	- "config=" in sdp for MPEG-4 video ES 	- free functions for all media format supports 	- separate header and structure for all audio format supports TEST in progress: 	- bit rate and video quality with MPEG-4 video ES 	- MPEG-4 video ES live support

--- a/include/fenice/Makefile.am
+++ b/include/fenice/Makefile.am
@@ -9,6 +9,9 @@ noinst_HEADERS	=	bufferpool.h \
 			md5.h \
 			mediainfo.h \
 			mpeg4es.h \
+			mpeg.h \
+			mpeg_system.h \
+			h26l.h \
 			socket.h \
 			prefs.h \
 			rtcp.h \
