--- a/mediainfo/Makefile.am
+++ b/mediainfo/Makefile.am
@@ -30,6 +30,8 @@ libmediainfo_la_SOURCES =	enum_media.c \
 				read_MPEG4ES_video.c \
 				read_MPEG_utils.c \
 				read_MPEG4ES_utils.c \
+				read_MPEGSYSTEM_utils.c \
+				common_utils.c \
 				mediaopen.c \
 				mediaclose.c
 			
