New media support handling. Now read_X, load_XPT and the new free_XPT are function pointer. Separated header file for each media type support. WARNINGS: do not release this, tests are in progress :-)

--- a/include/fenice/Makefile.am
+++ b/include/fenice/Makefile.am
@@ -8,8 +8,12 @@ noinst_HEADERS	=	bufferpool.h \
 			md5global.h \
 			md5.h \
 			mediainfo.h \
+			pcm.h \
+			mp3.h \
+			gsm.h \
 			mpeg4es.h \
 			mpeg.h \
+			mpeg_ts.h \
 			mpeg_system.h \
 			h26l.h \
 			socket.h \
