--- a/configure.ac
+++ b/configure.ac
@@ -245,6 +245,10 @@ AC_SUBST(fenice_conf_dir)
 fenice_docs_dir=$datadir/doc/$PACKAGE_NAME
 AC_SUBST(fenice_docs_dir)
 
+if test -f configure.ac; then
+	AC_DEFINE(FENICE_SVN, 1,[Define if this is a development (subversion) tree])
+fi
+
 AC_DEFINE_UNQUOTED(FENICE_MAX_SESSION_DEFAULT, $fenice_max_session, [Define max number of RTSP incoming sessions for Fenice])
 
 AC_DEFINE_UNQUOTED(FENICE_RTSP_PORT_DEFAULT, $fenice_rtsp_port, [Define default RTSP listening port])
