Now it compiles with new dir mediathread. - renamed log level FNC_LOG_ERR_FATAL with FNC_LOG_FATAL - configure checks the presence of "struct sockaddr_storage" - tcp_accept and tcp_read adapted to "struct sockaddr_storage" - sock_ntop_host function added to generalize inet_itoa - corrected some sysntax and conceptual errors in MediaParser, InputStream and demuxer headers - corrected some sysntax and conceptual errors in cache.c source file - changed some little indentations in new files.

--- a/configure.ac
+++ b/configure.ac
@@ -109,6 +109,9 @@ AC_FUNC_VPRINTF
 AC_CHECK_FUNCS(select socket gettimeofday uname getcwd getwd strcspn strdup strtoul strerror strstr setenv)
 AC_CHECK_FUNC(getaddrinfo)
 
+dnl check if we have the generic struct for net addresses the has max possible size
+AC_CHECK_TYPES(struct sockaddr_storage,,, [#include <sys/socket.h>])
+
 CFLAGS=""
 
 
@@ -275,6 +278,7 @@ dnl AC_DEFINE(FENICE_CONF_PATH_STR_ENV, "FENICE_CONF_PATH",[Define the name for 
 
 
 AC_CONFIG_FILES([Makefile])
+AC_CONFIG_FILES([mediathread/Makefile])
 AC_CONFIG_FILES([eventloop/Makefile])
 AC_CONFIG_FILES([rtp/Makefile])
 AC_CONFIG_FILES([rtcp/Makefile])
