--- a/mediathread/Makefile.am
+++ b/mediathread/Makefile.am
@@ -5,6 +5,7 @@ noinst_LTLIBRARIES = libmediath.la
 
 libmediath_la_SOURCES =	cache.c \
 			demuxer.c \
+			demuxer_sd.c \
 			InputStream.c
 			
 			
