--- a/mediathread/Makefile.am
+++ b/mediathread/Makefile.am
@@ -4,10 +4,10 @@ feniceincludedir = $(top_srcdir)/include
 noinst_LTLIBRARIES = libmediath.la
 
 libmediath_la_SOURCES =	cache.c \
-			demuxer.c \
-			demuxer_sd.c \
+			InputStream.c \
 			MediaParser.c \
-			InputStream.c
+			demuxer.c \
+			demuxer_sd.c 
 			
 			
 libmediath_la_LDFLAGS = -static
